added csv product creation

--- a/src/main/resources/templates/understockInGroupTemplate.html
+++ b/src/main/resources/templates/understockInGroupTemplate.html
@@ -61,7 +61,7 @@
         }
 
         th {
-            background-color : rgba(130, 145, 145, 0.87);
+            background-color: rgb(105 154 176 / 61%);
             color: white;
         }
     </style>
